[gd_scene load_steps=5 format=3 uid="uid://c87m08lc0b3e4"]

[ext_resource type="Script" uid="uid://caiabdo0cbleb" path="res://scripts/mainScene.gd" id="1_ki6c0"]
[ext_resource type="PackedScene" uid="uid://b8go3roda2avs" path="res://scenes/Room.tscn" id="2_8ifl6"]
[ext_resource type="Texture2D" uid="uid://dq67mypao8je4" path="res://assets/background.png" id="3_twn0q"]
[ext_resource type="FontFile" uid="uid://b56j2j32kxalu" path="res://assets/Sharpshooter.ttf" id="4_hhxvm"]

[node name="Root" type="Node"]
script = ExtResource("1_ki6c0")
gameScene = ExtResource("2_8ifl6")

[node name="HomeScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="HomeScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_twn0q")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HomeScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -29.5
offset_right = 20.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Title" type="Label" parent="HomeScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.78431374, 0.78431374, 1)
theme_override_colors/font_outline_color = Color(0.23921569, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_hhxvm")
theme_override_font_sizes/font_size = 40
text = "BUCKSHOT ROULETTE BY CSES"

[node name="ButtonContainer" type="VBoxContainer" parent="HomeScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="TwoPlayer" type="Button" parent="HomeScreen/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "2-Player"

[node name="ThreePlayer" type="Button" parent="HomeScreen/VBoxContainer/ButtonContainer"]
layout_mode = 2
disabled = true
text = "3-Player"

[node name="FourPlayer" type="Button" parent="HomeScreen/VBoxContainer/ButtonContainer"]
layout_mode = 2
disabled = true
text = "4-Player"
